test/libyul/yulSyntaxTests/blobhash.yul
{
    function blobhash() {}
}
// ====
// EVMVersion: >=cancun
// ----
// ParserError 5568: (15-23): Cannot use builtin function name "blobhash" as identifier name.
